--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image" href="/aksata.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>coba1</title>
+    <title>Aksata Movie</title>
   </head>
   <div id="cursor-effect"></div>
   <body>
