--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image" href="/aksata.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aksata Movie</title>
+    <meta name="google-site-verification" content="nNKuI2XYFZPj2T72QHx-xbbgiKJE4cqFEnhX5D3LIEk" />
   </head>
   <div id="cursor-effect"></div>
   <body>
