--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/aksata.png" />
+    <link rel="icon" type="image/png" href="/aksata1.png" />
+    <link rel="manifest" href="/manifest.json">
 
     <!-- Viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
