bismillah no conflict

--- a/public/offline.html
+++ b/public/offline.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>AKSATA MOVIE - Offline</title>
-    <link rel="icon" type="image/png" href="/aksata1.png" />
+    <link rel="icon" type="image/png" href="/aksata.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <style>
@@ -90,7 +90,7 @@
   </head>
   <body>
     <div class="offline-container">
-      <img src="aksata1.png" alt="AKSATA MOVIE Logo" class="logo" />
+      <img src="aksata.png" alt="AKSATA MOVIE Logo" class="logo" />
 
       <h1>AKSATA MOVIE</h1>
 
